function (ndarray_add_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} gtest gtest_main pthread)
    target_compile_definitions(${name} PRIVATE TEST_DIR=\"${PROJECT_SOURCE_DIR}/test/\")
    add_test(NAME ${name} COMMAND ${name})
endfunction()

ndarray_add_test(nd_iterator_test)
ndarray_add_test(lazy_evaluation_test)
ndarray_add_test(nd_array_test)
